refactor(handler): Rename the Add to Create + fix swagger
